--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,50 @@
-.App {
+.app-container {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.pip-container {
+  font-size: 40px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.controls {
+  cursor: pointer;
+  user-select: none;
 }
 
-.App-link {
-  color: #61dafb;
+.pip-input{
+  border: 0;
+  border-bottom: 1px solid;
+  font-size: 40px;
+  text-align: center;
+  width: 50px;
+  outline: none;
+  color: gray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pip-input::-webkit-inner-spin-button, 
+.pip-input::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
+.button {
+  height: 50px;
+  width: 150px;
+  font-weight: bold;
+  font-size: 30px;
+  border: 0;
+}
+
+.red {
+  background: red;
+}
+
+.green {
+  background-color: green;
+}
+
+.gray {
+  background-color: gray;
 }
